--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "",
+  "homepage": "https://riyaz345C.github.io/landsinida-frontend",
   "name": "lip",
   "version": "0.1.0",
   "private": true,
